tweepy streaming improvements

--- a/main.conf
+++ b/main.conf
@@ -1,2 +1,7 @@
 [DATABASE]
 keyspace_md = twitter_mdp
+[TWEEPY]
+consumer_key = tjnuF5hLptGQD6inWw2ArYBpl
+consumer_secret = oDqvsMRoYJXknX8Ldb80y2DDrlDwEyvkDObDXdU21gQqTqA5DI
+access_token = 981945472070963200-9QaeApfU2tXi8Rt7WubEYpbvnHcRIZI
+access_token_secret = csU1xsHmAnnrFDx5cwActRISn90OGQcbfS8EyFA6ubhbJ
