--- a/main.conf
+++ b/main.conf
@@ -1,3 +1,5 @@
+[MAIN]
+path = /home/piotr/hackathon/ec-challenge-2018/
 [DATABASE]
 keyspace_md = twitter_mdp
 [TWEEPY]
@@ -5,3 +7,6 @@ consumer_key = tjnuF5hLptGQD6inWw2ArYBpl
 consumer_secret = oDqvsMRoYJXknX8Ldb80y2DDrlDwEyvkDObDXdU21gQqTqA5DI
 access_token = 981945472070963200-9QaeApfU2tXi8Rt7WubEYpbvnHcRIZI
 access_token_secret = csU1xsHmAnnrFDx5cwActRISn90OGQcbfS8EyFA6ubhbJ
+[HADOOP]
+hadoop_path=/usr/local/hadoop/bin/hadoop
+streamer_path=/usr/local/hadoop/share/hadoop/tools/lib/hadoop-streaming-2.6.5.jar
